--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "sass-loader": "^13.1.0",
         "vue": "^3.2.36",
         "vue-loader": "^17.0.0",
+        "vue-moment": "^4.1.0",
         "vue-router": "^4.1.5"
     }
 }
